...
            android:id="@+id/scrollView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/search_view">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/journeys_recyclerView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"
                tools:context=".IndividualJourneysActivity">

            </androidx.recyclerview.widget.RecyclerView>
...
    =

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:id="@+id/journey_details_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/txtgry"
        android:visibility="invisible"
        app:layout_constraintHeight_percent="0.8">

...
                    android:text=" X"
                    android:textColor="@color/txtcolor"
                    android:textSize="30sp"
                    app:fontFamily="casual" />

                <TextView
                    android:id="@+id/title_journey"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:gravity="center"
                    android:text="@string/title_individual_journey"
                    android:textColor="@color/txtcolor"
...
    <!--Linear layout to display pie chart -->
    <!-- and details of pie chart-->



    <androidx.cardview.widget.CardView
        android:id="@+id/rename_cardView"
        android:layout_width="300dp"
        android:layout_height="130dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
...
                android:text="Rename the Journey"
                android:textColor="@color/txtwhte"
                android:textSize="17sp"
                app:fontFamily="casual" />

            <EditText
                android:id="@+id/rename_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/txtgry"
                android:drawablePadding="8dp"
                android:gravity="center"
                android:inputType="text"
...
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="2">

                <Button
                    android:id="@+id/confirm_rename"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:gravity="center"
                    android:text="Confirm"
                    android:textColor="@color/txtwhte"
...
        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/delete_cardView"
        android:layout_width="300dp"
        android:layout_height="110dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
...
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="2">

                <Button
                    android:id="@+id/confirm_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:gravity="center"
                    android:text="Confirm"
                    android:textColor="@color/txtwhte"
...
