<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/listPreferredItemHeightLarge">

    <LinearLayout
        android:id="@+id/m_linearLayoutHorizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|left"
        android:background="#D8AC76"
        android:orientation="horizontal">



        <TextView
            android:id="@+id/title_journey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="Journey 1"
            android:layout_marginStart="20dp"
            android:textColor="@color/txtwhte"
            android:textSize="18sp"
            app:fontFamily="casual" />

        <ImageView
            android:id="@+id/write_rename"
            android:layout_width="27dp"
            android:layout_height="32dp"
            android:layout_marginStart="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="2.017"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.974"
            app:srcCompat="@drawable/write_symb" />


        <LinearLayout
            android:id="@+id/m_linearLayoutHorizontal2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right|center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_next"
                android:layout_width="74dp"
                android:layout_height="38dp"
                android:gravity="right|center"
                app:srcCompat="@drawable/ic_next_foreground" />

            <ImageView
                android:id="@+id/image_delete"
                android:layout_width="62dp"
                android:layout_height="23dp"
                android:gravity="right|center"
                app:srcCompat="@drawable/ic_delete" />


        </LinearLayout>
    </LinearLayout>
</RelativeLayout>