...

    <Button
        android:id="@+id/start_journey"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
...

    <Button
        android:id="@+id/object_detection"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
...

        <TextView
            android:id="@+id/speed_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <TextView
            android:id="@+id/speed_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <TextView
            android:id="@+id/speed_limit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <TextView
            android:id="@+id/limit_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

    <LinearLayout
        android:id="@+id/journey_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
...

            <TextView
                android:id="@+id/journey1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <ImageView
                android:id="@+id/write_logo1"
                android:layout_width="27dp"
                android:layout_height="32dp"
...

            <TextView
                android:id="@+id/driver_type1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/average_speed1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
...

    <LinearLayout
        android:id="@+id/journey_linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
...

    <LinearLayout
        android:id="@+id/journey_linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
...

    <androidx.cardview.widget.CardView
        android:id="@+id/rename_cardView"
        android:layout_width="300dp"
        android:layout_height="130dp"
...

            <EditText
                android:id="@+id/rename_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

                <Button
                    android:id="@+id/confirm_rename"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <Button
                    android:id="@+id/ignore_rename"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
